add_executable(hello1 hello1.cpp)
add_executable(hello2 hello2.cpp)
add_executable(hello3 hello3.cpp)
add_executable(hello4 hello4.cpp)

add_executable(counter counter.cpp)

add_executable(mutex1 mutex1.cpp)
add_executable(mutex2 mutex2.cpp)
add_executable(mutex3 mutex3.cpp)
add_executable(mutex4 mutex4.cpp)